--- a/userspace/ls/CMakeLists.txt
+++ b/userspace/ls/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SOURCES
 
 add_executable(ls ${SOURCES})
 target_compile_options(ls PUBLIC -O2 -g)
-target_link_libraries(ls PUBLIC libc)
+target_link_libraries(ls PUBLIC libc ban)
 
 add_custom_target(ls-install
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/ls ${BANAN_BIN}/
