Kernel: Implement PS/2 mouse driver
This is realtively simple driver that queries extensions (scroll +
extra buttons) from mouse and reads mouse packages.

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -36,6 +36,7 @@ set(KERNEL_SOURCES
 	kernel/Input/PS2/Device.cpp
 	kernel/Input/PS2/Keyboard.cpp
 	kernel/Input/PS2/Keymap.cpp
+	kernel/Input/PS2/Mouse.cpp
 	kernel/InterruptController.cpp
 	kernel/kernel.cpp
 	kernel/Memory/DMARegion.cpp
