Userspace: Write simple mouse test program
This program draws circle on framebuffer, that you can move with
mouse, resize with scroll, and recolor with mouse buttons.

--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -26,8 +26,9 @@ set(USERSPACE_PROJECTS
 	sync
 	tee
 	test
-	test-globals
 	test-framebuffer
+	test-globals
+	test-mouse
 	test-sort
 	touch
 	u8sum
