Bootloader: Try to enable A20 line if it is disabled
VirtualBox seems to have A20 disabled by default

--- a/bootloader/bios/CMakeLists.txt
+++ b/bootloader/bios/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.26)
 project(bootloader ASM)
 
 set(BOOTLOADER_SOURCES
+	a20_line.S
 	boot.S
 	command_line.S
 	disk.S
