LibC: Add compile option to libc to stop optimizing string.h

--- a/libc/CMakeLists.txt
+++ b/libc/CMakeLists.txt
@@ -48,7 +48,7 @@ add_custom_target(crtx-install
 add_library(libc ${LIBC_SOURCES})
 add_dependencies(libc headers crtx-install)
 
-target_compile_options(libc PRIVATE -O2 -g -Wstack-usage=512)
+target_compile_options(libc PRIVATE -O2 -g -Wstack-usage=512 -fno-tree-loop-distribute-patterns)
 target_compile_options(libc PUBLIC -Wall -Wextra -Werror -Wno-error=stack-usage=)
 
 add_custom_target(libc-install
