Toolchain: Add `insmod all_video` to uefi grub
This allows getting GOP framebuffer... This was all it took

--- a/toolchain/grub-uefi.cfg
+++ b/toolchain/grub-uefi.cfg
@@ -1,6 +1,8 @@
 insmod part_gpt
 set root=(hd0,gpt2)
 
+insmod all_video
+
 menuentry "banan-os" {
 	multiboot2 /boot/banan-os.kernel root=/dev/sda2
 }
