Kernel: Write simple working E1000 and E1000E drivers

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -49,7 +49,9 @@ set(KERNEL_SOURCES
 	kernel/Memory/MemoryRegion.cpp
 	kernel/Memory/PhysicalRange.cpp
 	kernel/Memory/VirtualRange.cpp
-	kernel/Networking/E1000.cpp
+	kernel/Networking/E1000/E1000.cpp
+	kernel/Networking/E1000/E1000E.cpp
+	kernel/Networking/NetworkInterface.cpp
 	kernel/OpenFileDescriptorSet.cpp
 	kernel/Panic.cpp
 	kernel/PCI.cpp
