Userspace: Implement super simple DNS resolver in userspace
You connect to this service using unix domain sockets and send the
asked domain name. It will respond with ip address or 'unavailable'

There is no DNS cache implemented so all calls ask the nameserver.

--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -11,14 +11,16 @@ set(USERSPACE_PROJECTS
 	dhcp-client
 	echo
 	id
-	init
 	image
+	init
 	loadkeys
 	ls
 	meminfo
 	mkdir
 	mmap-shared-test
+	nslookup
 	poweroff
+	resolver
 	rm
 	Shell
 	sleep
