BAN/Kernel: Rework assertion/panic system
BAN/Assert.h does not need any includes meaning it can be included
anywhere without problems.

--- a/BAN/CMakeLists.txt
+++ b/BAN/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.26)
 project(BAN CXX)
 
 set(BAN_SOURCES
+	BAN/Assert.cpp
 	BAN/New.cpp
 	BAN/String.cpp
 	BAN/StringView.cpp
