--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -40,6 +40,7 @@ set(KERNEL_SOURCES
 	kernel/Input/PS2/Keyboard.cpp
 	kernel/Input/PS2/Keymap.cpp
 	kernel/Input/PS2/Mouse.cpp
+	kernel/Interruptable.cpp
 	kernel/InterruptController.cpp
 	kernel/kernel.cpp
 	kernel/Memory/DMARegion.cpp
