Kernel: Add PageTable stub to progress linking

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -124,6 +124,7 @@ elseif("${BANAN_ARCH}" STREQUAL "i386")
 	set(KERNEL_SOURCES
 		${KERNEL_SOURCES}
 		arch/i386/boot.S
+		arch/i386/PageTable.cpp
 		arch/i386/SpinLock.S
 		arch/i386/Syscall.S
 		arch/i386/Thread.S
