--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -125,6 +125,7 @@ elseif("${BANAN_ARCH}" STREQUAL "i386")
 		${KERNEL_SOURCES}
 		arch/i386/boot.S
 		arch/i386/PageTable.cpp
+		arch/i386/Signal.S
 		arch/i386/Syscall.S
 		arch/i386/Thread.S
 	)
