--- a/bootloader/installer/CMakeLists.txt
+++ b/bootloader/installer/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.26)
 
-project(x86_64-banan_os-bootloader-installer CXX)
+if (NOT DEFINED ENV{BANAN_ARCH})
+	message(FATAL_ERROR "environment variable BANAN_ARCH not defined")
+endif ()
+set(BANAN_ARCH $ENV{BANAN_ARCH})
+
+project(banan_os-bootloader-installer CXX)
 
 set(SOURCES
     crc32.cpp
@@ -10,8 +15,8 @@ set(SOURCES
 	main.cpp
 )
 
-add_executable(x86_64-banan_os-bootloader-installer ${SOURCES})
-target_compile_options(x86_64-banan_os-bootloader-installer PRIVATE -O2 -std=c++20)
-target_compile_definitions(x86_64-banan_os-bootloader-installer PRIVATE __arch=x86_64)
-target_include_directories(x86_64-banan_os-bootloader-installer PRIVATE ${CMAKE_SOURCE_DIR}/../../LibELF/include)
-target_include_directories(x86_64-banan_os-bootloader-installer PRIVATE ${CMAKE_SOURCE_DIR}/../../kernel/include)
+add_executable(banan_os-bootloader-installer ${SOURCES})
+target_compile_options(banan_os-bootloader-installer PRIVATE -O2 -std=c++20)
+target_compile_definitions(banan_os-bootloader-installer PRIVATE __arch=${BANAN_ARCH})
+target_include_directories(banan_os-bootloader-installer PRIVATE ${CMAKE_SOURCE_DIR}/../../LibELF/include)
+target_include_directories(banan_os-bootloader-installer PRIVATE ${CMAKE_SOURCE_DIR}/../../kernel/include)
