--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -56,7 +56,8 @@ add_subdirectory(aoc2023)
 
 foreach(USERSPACE_PROJECT ${USERSPACE_PROJECTS})
 	target_compile_options(${USERSPACE_PROJECT} PRIVATE -g)
-	add_dependencies(${USERSPACE_PROJECT} libc-install ban-install)
 	add_dependencies(userspace ${USERSPACE_PROJECT})
 	add_dependencies(userspace-install ${USERSPACE_PROJECT}-install)
+
+	target_link_options(${USERSPACE_PROJECT} PRIVATE -nolibc)
 endforeach()
