Ports: Add doom port
This patch contains simple infrastructure for porting software for
banan-os. I added a doom as the first port. Doom needs a wad file
that you have to aquire yourself. I am not sure if I am allowed to
redistribute doom1.wad (shareware) version so I decided not to.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,10 +36,14 @@ add_custom_target(headers
 )
 
 add_custom_target(install-sysroot
-	COMMAND cd ${BANAN_SYSROOT} && tar cf ${BANAN_SYSROOT_TAR} *
 	DEPENDS kernel-install
 	DEPENDS ban-install
 	DEPENDS libc-install
 	DEPENDS userspace-install
 	DEPENDS libelf-install
+)
+
+add_custom_target(package-sysroot
+	COMMAND cd ${BANAN_SYSROOT} && tar cf ${BANAN_SYSROOT_TAR} *
+	DEPENDS install-sysroot
 )
