Kernel: Move ACPI to its own directory and namespace

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 
 set(KERNEL_SOURCES
 	font/prefs.psf.o
-	kernel/ACPI.cpp
+	kernel/ACPI/ACPI.cpp
 	kernel/APIC.cpp
 	kernel/BootInfo.cpp
 	kernel/CPUID.cpp
