Kernel: Rework AML package and implement indexing in to packages

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -16,6 +16,7 @@ set(KERNEL_SOURCES
 	kernel/ACPI/AML/NamedObject.cpp
 	kernel/ACPI/AML/Namespace.cpp
 	kernel/ACPI/AML/Node.cpp
+	kernel/ACPI/AML/Package.cpp
 	kernel/ACPI/AML/Scope.cpp
 	kernel/APIC.cpp
 	kernel/BootInfo.cpp
