Bootloader: Implement better memset and memcpy for 32 bit addresses

--- a/bootloader/bios/CMakeLists.txt
+++ b/bootloader/bios/CMakeLists.txt
@@ -15,5 +15,6 @@ set(BOOTLOADER_SOURCES
 )
 
 add_executable(bootloader ${BOOTLOADER_SOURCES})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 target_link_options(bootloader PRIVATE LINKER:-T,${CMAKE_CURRENT_SOURCE_DIR}/linker.ld)
 target_link_options(bootloader PRIVATE -nostdlib)
