WindowServer: Add window title to title bar and send close events

--- a/userspace/WindowServer/CMakeLists.txt
+++ b/userspace/WindowServer/CMakeLists.txt
@@ -5,12 +5,13 @@ project(WindowServer CXX)
 set(SOURCES
 	main.cpp
 	Framebuffer.cpp
+	Window.cpp
 	WindowServer.cpp
 )
 
 add_executable(WindowServer ${SOURCES})
 target_compile_options(WindowServer PUBLIC -O2 -g)
-target_link_libraries(WindowServer PUBLIC libc ban libgui libinput)
+target_link_libraries(WindowServer PUBLIC libc ban libfont libgui libinput)
 
 add_custom_target(WindowServer-install
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/WindowServer ${BANAN_BIN}/
