--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -32,6 +32,8 @@ set(KERNEL_SOURCES
 	kernel/FS/DevFS/FileSystem.cpp
 	kernel/FS/Ext2/FileSystem.cpp
 	kernel/FS/Ext2/Inode.cpp
+	kernel/FS/FAT/FileSystem.cpp
+	kernel/FS/FAT/Inode.cpp
 	kernel/FS/FileSystem.cpp
 	kernel/FS/Inode.cpp
 	kernel/FS/Pipe.cpp
