LibImage: Move userspace image parsing to its own library
The image utility now uses this tool instead of parsing images on its
own.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(libc)
 add_subdirectory(LibELF)
 add_subdirectory(LibFont)
 add_subdirectory(LibGUI)
+add_subdirectory(LibImage)
 add_subdirectory(LibInput)
 add_subdirectory(userspace)
 
@@ -38,6 +39,7 @@ add_custom_target(headers
 	DEPENDS libelf-headers
 	DEPENDS libfont-headers
 	DEPENDS libgui-headers
+	DEPENDS libimage-headers
 	DEPENDS libinput-headers
 )
 
@@ -49,6 +51,7 @@ add_custom_target(install-sysroot
 	DEPENDS libelf-install
 	DEPENDS libfont-install
 	DEPENDS libgui-install
+	DEPENDS libimage-install
 	DEPENDS libinput-install
 )
 
