WindowServer: Add support for background images
WindowServer now looks in _$HOME/.config/WindowServer.conf_ for a
configuration file that can specify a background image.

Also add default background image /usr/share/images/sample.ppm to the
base sysroot provided in the git repo.

--- a/userspace/WindowServer/CMakeLists.txt
+++ b/userspace/WindowServer/CMakeLists.txt
@@ -11,7 +11,7 @@ set(SOURCES
 
 add_executable(WindowServer ${SOURCES})
 target_compile_options(WindowServer PUBLIC -O2 -g)
-target_link_libraries(WindowServer PUBLIC libc ban libfont libgui libinput)
+target_link_libraries(WindowServer PUBLIC libc ban libfont libgui libimage libinput)
 
 add_custom_target(WindowServer-install
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/WindowServer ${BANAN_BIN}/
