All: Fix a lot of compiler warnings from header files
While reworking build system, header files started to report warnings.

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -66,6 +66,7 @@ set(KERNEL_SOURCES
 	kernel/Networking/E1000/E1000E.cpp
 	kernel/Networking/IPv4Layer.cpp
 	kernel/Networking/NetworkInterface.cpp
+	kernel/Networking/NetworkLayer.cpp
 	kernel/Networking/NetworkManager.cpp
 	kernel/Networking/NetworkSocket.cpp
 	kernel/Networking/TCPSocket.cpp
